--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run ng-elements-ssr:serve-ssr",
+    "serve:ssr": "node dist/ng-elements-ssr/server/main.js",
+    "build:ssr": "ng build --prod && ng run ng-elements-ssr:server:production",
+    "prerender": "ng run ng-elements-ssr:prerender"
   },
   "private": true,
   "dependencies": {
@@ -15,18 +19,30 @@
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
+    "@angular/elements": "^11.1.2",
     "@angular/forms": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
+    "@angular/platform-server": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@nguniversal/express-engine": "^11.1.1",
+    "bufferutil": "^4.0.3",
+    "canvas": "^2.6.1",
+    "document-register-element": "^1.7.2",
+    "domino": "^2.1.6",
+    "express": "^4.15.2",
+    "jsdom": "^16.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^11.0.0",
     "@angular-devkit/build-angular": "~0.1101.2",
     "@angular/cli": "~11.1.2",
     "@angular/compiler-cli": "~11.1.1",
+    "@nguniversal/builders": "^11.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -37,6 +53,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
